Admin dashboard and login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,62 @@
 
-<app-header></app-header>
+
+
 <app-sidebar></app-sidebar>
+
+        
+
+
+<div style="margin-left: 15%;">
+    <h3 class="i-name">Dashboard</h3>
+<div class="values">
+<div class="val-box">
+    <i class="fas fa-shopping-cart"></i>
+    <div>
+        <h3>1000</h3>
+            <span>Stock</span>
+        </div>
+    </div>
+
+    <div class="val-box">
+        <i class="fas fa-dollar-sign"></i>
+        <div>
+            <h3>1000</h3>
+                <span>Sales</span>
+            </div>
+        </div>
+        <div class="val-box">
+            <i class="fas fa-shopping-cart"></i>
+            <div>
+                <h3>1000</h3>
+                    <span>Orders</span>
+                </div>
+            </div>
+            <div class="val-box">
+                <i class="fas fa-users"></i>
+                <div>
+                    <h3>1000</h3>
+                        <span>Customers</span>
+                    </div>
+                </div>
+</div>
+</div>
+
+<!--<div class="bootstrap-wrapper ">
+    <div class="container-fluid">
+      <div class="row ">
+        <div class="col-md-2 ">
+          <app-sidebar></app-sidebar>
+        </div>
+  
+        <div class="col-md-10">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>-->
+   
+   
+
+    
+
+ 
