--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="#news">Products</a>
+    <a href="/product">Products</a>
     <a href="#contact">Orders</a>
-    <a href="#about">Suppliers</a>
+    <a href="/supplier">Suppliers</a>
   </div>
  
