admin dashboard changes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
                         </div>
                        
                         <button type="submit" class="btn btn-primary">Login</button><br>
-                        <a href="#">New User? Register Here!!</a>
+                        <a href="/register">New User? Register Here!!</a>
                       </form>
                
             </div>
