--- a/src/app/product-module/product-module.component.html
+++ b/src/app/product-module/product-module.component.html
@@ -1,5 +1,11 @@
+
+<div class="bootstrap-wrapper">
+<div class="container">
+  <div class="row">
+      <div class="col-md-8 offset-md-2"> 
+        <div class="card">
 <form [formGroup]="productForm" (ngSubmit)="submit()">
-  <h1>Product Registration</h1>
+  <h2>Product Registration</h2>
   <label>
     Name:
     <input type="text" formControlName="name" required>
@@ -68,7 +74,8 @@
   <button class="btn-2" type="submit"><span>Register Product</span></button>
 
 </form>
-
+</div>
+<!--
 <br>
 <button style="height: 40px;" (click)="ProductReport()">Generate Report</button>
 <table border="1">
@@ -114,3 +121,4 @@
   </tr>
 
 </table>
+</div></div></div></div></div>-->
