--- a/src/app/supplier-module/supplier-module.component.html
+++ b/src/app/supplier-module/supplier-module.component.html
@@ -1,5 +1,11 @@
+
+<div class="bootstrap-wrapper">
+  <div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2"> 
+          <div class="card">
 <form [formGroup]="supplierForm" (ngSubmit)="submit()">
-    <h1>Supplier Registration</h1>
+    <h2>Supplier Registration</h2>
     <label>
       Name:
       <input type="text" formControlName="name" required>
@@ -58,9 +64,9 @@
   
     <button class="btn-2" type="submit"><span>Register Product</span></button>
   
-  </form>
+  </form></div></div></div></div></div>
   
-  <br>
+  <!--<br>
   <table border="1">
     <tr>
       <th>Name</th>
@@ -102,4 +108,4 @@
       </td>
     </tr>
   
-  </table>
+  </table>-->
