--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,7 @@
 nav{
     height: 100%;
+    color: rgb(36, 34, 34);
+    background-color:white
 }
 .side-nav-button:hover{
     background-color: rgba(240, 255, 255, 0.347);
@@ -9,4 +11,16 @@ nav{
 .margin{
     margin-left: 70px;
     text-align: right;
+}
+a{
+    text-align: right;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: large;
+   
+}
+.profile-image{
+    width: 9%;
+    height: 100%;
+   
 }
