--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,34 +1,5 @@
-.i-name{
-    color:gray ;
-    padding: 30px 30px 0 30px;
-    font-size: 24px;
-    font-weight: 700;
-}
-.values{
-    padding: 30px 30px 0 30px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-}
-.values .val-box{
-    background:rgb(226, 224, 224);
-    width:235px ;
-    padding: 16px 20px;
-    display:flex ;
-    align-items: center;
-    border-radius:5px ;
-    justify-content: flex-start;
-}
-.values .val-box i{
-    font-size: 25px;
-   color: aliceblue;
-   text-align: center;
-   line-height: 60px;
-    width:60px ;
-    height: 60px;
-    background: lightskyblue;
-    border-radius: 50%;
-    margin-right: 15px;
+.profile-image{
+    width: 100%;
+    height: auto;
    
 }
