--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     font-family: 'Poppins',sans-serif;
-   
+    background-color: rgb(220, 250, 241) !important;
 }
