--- a/src/app/order-module/order-module.component.html
+++ b/src/app/order-module/order-module.component.html
@@ -12,6 +12,7 @@
 
 <!-- <div class="container mt-1"> -->
   <h3 class ='h2'>Order Details</h3>
+  <button type="button"  class="btn btn-primary right" style="margin-right: 30%;">Place Order</button>
   <!-- <p>The .table-dark class adds a black background to the table:</p>             -->
   <table class="table table-dark">
     <thead>
@@ -19,19 +20,25 @@
         <th>Id</th>
         <th>Order Number</th>
         <th>Product Id</th>
-        <th>No of Product</th>
+        <th>Quantity</th>
         <th>Amount</th>
+        <th>Total Amount</th>
+        <th>Available Quantity</th>
         <th>Order status</th>
+        <th>Customer Id</th>
       </tr>
     </thead>
     <tbody *ngFor="let order of orderData">
       <tr>
         <td><strong>{{order.id}}</strong></td>
-        <td>{{order.ordernum}}</td>
+        <td>{{order.ordernumber}}</td>
         <td>{{order.productId}}</td>
-        <td>{{order.noOfProduct}}</td>
-        <td>{{order.amount}}</td>
+        <td>{{order.quantity}}</td>
+        <td>{{order.price}}</td>
+        <td>{{order.totalPrice}}</td>
+        <td>{{order.availableQuantity}}</td>
         <td>{{order.status}}</td>
+        <td>{{order.customer}}</td>
       </tr>
     </tbody>
   </table>
