--- a/src/app/product-module/product-module.component.html
+++ b/src/app/product-module/product-module.component.html
@@ -63,15 +63,9 @@
   </div>
   </label>
 
-  <label>
-    Image URL:
-    <input type="text" formControlName="image" required>
-    <div style="color:red; margin-top: 5px;" *ngIf="productForm.controls['image'].errors?.['required']">
-      <span>Product Image URL is required</span>
-  </div>
-  </label>
+  
 
-  <button class="btn-2" type="submit"><span>Register Product</span></button>
+  <button class="button-33" role="button"  type="submit"><span>Add Product</span></button>
 
 </form>
 </div>
