--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -55,7 +55,7 @@
 		            </select>
                     
 		          </div><br>
-		          <button type="submit" name="user_register" class="btn btn-primary"><span class="fa fa-user"></span>&nbsp;Register</button>
+		          <button type="submit" name="user_register" class="button-33" role="button"><span class="fa fa-user"></span>&nbsp;Register</button>
 		          
 		 </div>
 	
