--- a/src/app/welcome-admin/welcome-admin.component.html
+++ b/src/app/welcome-admin/welcome-admin.component.html
@@ -21,7 +21,7 @@
         <div class="val-box">
             <i class="fas fa-shopping-cart"></i>
             <div>
-                <h3></h3>
+                <h3>{{ocount}}</h3>
                     <span>Orders</span>
                 </div>
             </div>&nbsp;&nbsp;
