--- a/src/app/welcome-user/welcome-user.component.html
+++ b/src/app/welcome-user/welcome-user.component.html
@@ -6,7 +6,7 @@
             <div class="sidebar">
                 <br>
                
-                <a href="#contact">Orders</a>
+                <a [routerLink]="['/order/customer']">Orders</a>
                 
               </div>
         </div>
