--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,17 @@
 
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="/admin/product">Products</a>
-    <a href="#contact">Orders</a>
+    <a href="/admin/getproduct">Products</a>
+   
     <a href="admin/supplier">Suppliers</a>
+    
+
+    <a [routerLink]="['/admin/order/admin']">Orders</a>
+
+
+
+
+
+
   </div>
  
