--- a/src/app/order-module/order-module.component.html
+++ b/src/app/order-module/order-module.component.html
@@ -13,7 +13,7 @@
   <div style="clear: both">
     <h3 class="h2">Order Details</h3>
     <button type="button" [routerLink]="['/placeOrder']" style="float: right;color: #0a443d;
-    background-color: #B3F3DF;margin-right: 20px;" class="btn mr-0 ml-auto d-block"><b>Make an order</b></button>
+    background-color: #B3F3DF;margin-right: 20px;" class="btn mr-0 ml-auto d-block"><b>Make order</b></button>
   </div>
 
   <!-- <p>The .table-dark class adds a black background to the table:</p>    table-dark          -->
